// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 lglpeb"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 cKeoqP"
  >
    <p
      class="header__Link-djltcn-6 hdYwTX"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-1 cKeoqP"
>
  <p
    class="header__Link-djltcn-6 ktcrzT"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-djltcn-0 dUzWEZ"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-1 cKeoqP"
  >
    <div
      class="header__Group-djltcn-2 kfCmYd"
    >
      <p
        class="header__Link-djltcn-6 ktcrzT"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-6 ktcrzT"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-2 kfCmYd"
    >
      <div
        class="header__Search-djltcn-13 cTbSnj"
      >
        <button
          class="header__SearchIcon-djltcn-14 xiTAm"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-15 kHfkOW"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-12 cokyvX"
      >
        <button
          class="header__Picture-djltcn-10 cgSHMp"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-11 fRCZrh"
        >
          <div
            class="header__Group-djltcn-2 kfCmYd"
          >
            <button
              class="header__Picture-djltcn-10 cgSHMp"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-6 ktcrzT"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-djltcn-2 kfCmYd"
          >
            <p
              class="header__Link-djltcn-6 ktcrzT"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-1 header__Feature-djltcn-3 cKeoqP QkoOu"
  >
    <h2
      class="header__FeatureCallOut-djltcn-4 dlpFMT"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-5 zHXyP"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-16 dsKZaN"
    >
      Play
    </button>
  </div>
</div>
`;
